# last-week-in-serverless

./: .gitignore  README.md  last-week-in-serverless.code-workspace  main.ipynb  package.json  pnpm-lock.yaml  pyproject.toml
apps/backend/: README.md  package.json
apps/backend/lib/: stack.ts
apps/rag/: chain.py  main.ipynb  prompt.py  split.py
backend/: pyproject.toml
backend/rag/: load.py  response.txt  store.py
data/: categories.json  categories1.json
data/benchmark/: benchmark_data.json
data/context/: category_context_ss.json  dot_products.json  whats_new.json
data/context/ranks/: content_max.json  summary_avg.json  summary_max.json  summary_max_5.json  title_max.json  unranked.json
data/example/: categories.json  links.json  rss_feed.json
data/prompt/rtf/: Fwd_ Last Week in Serverless #13.rtf  Last Week (2 months in Serverless).rtf  Last Week (or so) in Serverless.rtf  Last Week In Serverless.rtf  Last Week in Serverless #10.rtf  Last Week in Serverless #11.rtf  Last Week in Serverless #8.rtf  Last Week in Serverless2.rtf  Last Week in Serverless3.rtf  Last week in serverless #6.rtf  Last week in serverless #7.rtf  Last week in severless #4.rtf  Last week in severless #5.rtf  Re_ Last Week in Serverless.rtf
data/prompt/txt/: Fwd_ Last Week in Serverless #13.txt  Last Week (2 months in Serverless).txt  Last Week (or so) in Serverless.txt  Last Week In Serverless.txt  Last Week in Serverless #10.txt  Last Week in Serverless #11.txt  (+8 more)
preprocessing/: pyproject.toml
preprocessing/src/: constants.py  main.ipynb  pipe.py
src/: constants.py  pipe.py
(+60 files in other folders)
